[workspace]
members = ["tokens"]
resolver = "2"

[workspace.package]
version = "0.1.2"
edition = "2021"
authors = ["Iarla Crewe <iarla@pyra.fi>"]
license = "MIT"
repository = "https://github.com/pyra-labs/pyra-rust-sdk"
keywords = ["solana", "token", "defi", "blockchain"]
categories = ["api-bindings", "cryptography::cryptocurrencies"]

[workspace.dependencies]
solana-program = "2.1.0"
