[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.2.11"
edition = "2021"
authors = ["Iarla Crewe <iarla@pyra.fi>"]
license = "MIT"
repository = "https://github.com/pyra-labs/pyra-rust-sdk"
keywords = ["solana", "token", "defi", "blockchain"]
categories = ["api-bindings", "cryptography::cryptocurrencies"]

[workspace.dependencies]
solana-pubkey = "^2.2.0"
solana-program = "^2.2.0"
borsh = "1"
anchor-lang = "0.31.1"
